# Obsidian

./: .gitignore  CMakeLists.txt  COMPILING.md  LICENSE.txt
.github/workflows/: cmake-release.yml  cmake.yml
addons/: Addon Instructions.txt
addons/Obsidian Third-Party Addons/modules/: zdoom_armaetus_themes.lua
data/: License Attribution.txt
games/doom/: factory.lua  resources.lua  x_doom1.lua
games/doom/fabs/fence/: bars_16.lua  bars_16.wad
games/doom/fabs/stairs/: gtd_stairs_glow_64.lua  gtd_stairs_glow_64.wad
games/doom/fabs/wall/: gtd_wall_hell_engraving_set.lua  gtd_wall_hell_engraving_set.wad
games/heretic/: factory.lua  resources.lua
games/noah/: factory.lua
games/obc/: factory.lua
games/wolf/: factory.lua  x_spear.lua
libraries/: CMakeLists.txt
libraries/fltk/CMake/: options.cmake  setup.cmake
libraries/fltk/src/: Fl_Device.cxx  nanosvg.cxx
libraries/luaalloc/: CMakeLists.txt
libraries/miniz/: CMakeLists.txt
libraries/moonnuklear/: CMakeLists.txt
libraries/moonnuklear/src/: atlas.c  compat-5.3.h  font.c  moonnuklear.h  moonnuklear_extern.h  tree.h  udata.c  udata.h
libraries/nuklear/: CMakeLists.txt  nuklear_sdl_renderer.h
libraries/physfs/: CMakeLists.txt
libraries/sdl3/: CMakeLists.txt
libraries/steve/src/ext/: json.h
modules/: build_nodes.lua  compress_output.lua  debugger.lua  export_map.lua  modded_game_extras.lua  prefab_controller.lua  procedural_gotcha_zdoom.lua  ui_arch.lua  ui_links.lua  zdoom_orp_generative_resources.lua  zdoom_otex.lua  zdoom_otex_db.lua
scripts/: area.lua  brush.lua  cave.lua  grower.lua  item.lua  layout.lua  level.lua  monster.lua  obsidian.lua  prefab.lua  quest.lua  render.lua  room.lua  seed.lua  shapes.lua  title_gen.lua  ui.lua  util.lua
scripts/094/: builder.lua  monster.lua  plan_dm.lua  planner.lua  writer.lua
source/: bsp.cc  csg_bsp.cc  csg_doom.cc  csg_local.h  csg_main.cc  csg_main.h  csg_shade.cc  csg_spots.cc  dm_extra.cc  dm_prefab.cc  g_doom.cc  g_doom.h  g_wolf.cc  lib_argv.cc  lib_argv.h  lib_tga.cc  lib_tga.h  lib_util.cc  lib_util.h  lib_wad.cc  lib_wad.h  lib_zip.cc  lib_zip.h  m_about.cc  m_addons.cc  m_addons.h  m_cookie.cc  m_cookie.h  m_dialog.cc  m_lua.cc  m_lua.h  m_manage.cc  m_options.cc  m_theme.cc  m_trans.cc  m_trans.h  main.cc  main.h  poly.cc  poly.h  (+36 more)
